--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -92,7 +92,8 @@ ShowBlameHandler_JobName=Computing Revision Information
 GenerateHistoryJob_errorComputingHistory=Cannot compute Git history.
 GenerateHistoryJob_taskFoundMultipleCommits=Found {0} commits
 GenerateHistoryJob_taskFoundSingleCommit=Found 1 commit
-GerritConfigurationPage_BranchTooltipHover=Press {0} to see a filtered list of branch names
+GerritConfigurationPage_BranchTooltipHover=Press {0} or start typing to see a filtered list of branch names
+GerritConfigurationPage_BranchTooltipStartTyping=Start typing to see a filtered list of branch names
 GerritConfigurationPage_ConfigureFetchReviewNotes=Fetch will be auto-configured to fetch review notes from Gerrit.
 GerritConfigurationPage_errorBranchName=Branch name is required
 GerritConfigurationPage_groupFetch=Fetch configuration
@@ -876,7 +877,6 @@ CreateBranchPage_CreateBranchNameProviderFailed=Failed to create branch name pro
 CreateBranchPage_CreatingBranchMessage=Creating branch...
 CreateBranchPage_LocalBranchWarningMessage=Local branch as upstream is not recommended, use remote branch
 CreateBranchPage_MissingSourceMessage=Please select a source branch
-CreateBranchPage_NormalizeBranchName=Normalize branch name
 CreateBranchPage_SourceLabel=&Source:
 CreateBranchPage_SourceSelectButton=Select...
 CreateBranchPage_SourceSelectionDialogMessage=Select source for creating branch.
@@ -914,7 +914,8 @@ PushTagsPage_TagsLabelNoneSelected=Tags:
 PushTagsPage_TagsLabelSelected=Tags ({0} selected):
 PushTagsWizard_WindowTitle=Push Tags
 PushToGerritPage_BranchLabel=Gerrit &Branch:
-PushToGerritPage_ContentProposalHoverText=Press {0} to see a filtered list of branch names
+PushToGerritPage_ContentProposalHoverText=Press {0} or start typing to see a filtered list of branch names
+PushToGerritPage_ContentProposalStartTypingText=Start typing to see a filtered list of branch names
 PushToGerritPage_Message=Select a Gerrit URI and branch name
 PushToGerritPage_MissingBranchMessage=Select a branch
 PushToGerritPage_MissingUriMessage=Select a URI
