--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -20,7 +20,6 @@
 #    Christian Georgi <christian.georgi@sap.com> - Check for empty second line is configurable
 #    Denis Zygann <d.zygann@web.de>           - 473919 Add tooltip text for sorting files action
 #    Wim Jongman <wim.jongman@remainsoftware.com - 358152
-#    Jaxsun McCarthy Huggan <jaxsun.mccarthy@tasktop.com> - 509181 add change to local branch radio button
 ###############################################################################
 AbortRebaseCommand_CancelDialogMessage=The abort operation was canceled
 AbortRebaseCommand_JobName=Aborting Rebase
@@ -41,12 +40,11 @@ Activator_refreshFailed=Failed to refresh projects from index changes
 Activator_setupFocusListener=Setting up the focus listener
 AddConfigEntryDialog_AddConfigTitle=Add a configuration entry
 AddConfigEntryDialog_ConfigKeyTooltip=Use "." to separate section/subsection/name, e.g. "core.bare", "remote.origin.url"
-AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value.
-AddConfigEntryDialog_EnterValueMessage=Please enter a value.
-AddConfigEntryDialog_InvalidKeyMessage=Please enter a valid key: the first and the last component may contain only the letters [A-Za-z0-9] or the dash, and the last component must start with a letter.
-AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by ".".
+AddConfigEntryDialog_DialogMessage=Please enter a key, e.g. "user.name" and a value
+AddConfigEntryDialog_EnterValueMessage=Please enter a value
+AddConfigEntryDialog_KeyComponentsMessage=The key must have two or more components separated by "."
 AddConfigEntryDialog_KeyLabel=&Key
-AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key.
+AddConfigEntryDialog_MustEnterKeyMessage=Please enter a key
 AddConfigEntryDialog_ValueLabel=&Value
 AddRemotePage_EnterRemoteNameMessage=Please enter a remote name
 AddRemotePage_RemoteNameAlreadyExistsError=Remote already exists
@@ -953,7 +951,6 @@ FetchGerritChangePage_AfterFetchGroup=Action to perform after fetch
 FetchGerritChangePage_BranchEditButton=Edit Branches...
 FetchGerritChangePage_BranchNameText=Branch &name:
 FetchGerritChangePage_ChangeLabel=&Change:
-FetchGerritChangePage_ChangeToLocalBranchRadio=Checkout local branch already existing for this change
 FetchGerritChangePage_CheckingOutTaskName=Checking out change
 FetchGerritChangePage_CheckoutRadio=Check&out FETCH_HEAD
 FetchGerritChangePage_ContentAssistDescription=Patch set {0} of change {1}
@@ -963,14 +960,13 @@ FetchGerritChangePage_CreatingTagTaskName=Creating tag
 FetchGerritChangePage_FetchingTaskName=Fetching change {0}
 FetchGerritChangePage_GeneratedTagMessage=Generated for Gerrit change {0}
 FetchGerritChangePage_GetChangeTaskName=Get change from Gerrit
-FetchGerritChangePage_CreateLocalBranchRadio=Create a &local branch
+FetchGerritChangePage_LocalBranchRadio=Create a &local branch
 FetchGerritChangePage_LocalBranchCheckout=Checkout new branch
 FetchGerritChangePage_MissingChangeMessage=Please provide a change
 FetchGerritChangePage_PageMessage=Please select a Gerrit URI and change to fetch
 FetchGerritChangePage_PageTitle=Fetch a change from Gerrit into repository {0}
 FetchGerritChangePage_RunInBackground=&Run in background
-Change_FullRefNamePattern=refs/heads/change/{0}/{1}
-Change_SuggestedBranchNamePattern=change/{0}/{1}
+FetchGerritChangePage_SuggestedRefNamePattern=change/{0}/{1}
 FetchGerritChangePage_TagNameText=Tag &name:
 FetchGerritChangePage_TagRadio=Create and checkout a &tag
 FetchGerritChangePage_UpdateRadio=U&pdate FETCH_HEAD only
@@ -1699,46 +1695,40 @@ RevertHandler_JobName=Reverting {0} Commits
 RevertHandler_NoRevertTitle=No revert performed
 RevertOperation_InternalError=An internal error occurred
 
-SelectUriWizard_Title=Select a URI
-AbstractConfigureRemoteDialog_AddRefSpecLabel=A&dd...
-AbstractConfigureRemoteDialog_BranchLabel=Branch:
-AbstractConfigureRemoteDialog_ChangeRefSpecLabel=M&odify...
-AbstractConfigureRemoteDialog_ChangeUriLabel=&Change...
-AbstractConfigureRemoteDialog_DeleteUriLabel=Re&move
-AbstractConfigureRemoteDialog_DetachedHeadMessage=Detached HEAD
-AbstractConfigureRemoteDialog_DryRunButton=Dr&y-Run
-AbstractConfigureRemoteDialog_EditAdvancedLabel=Ad&vanced...
-AbstractConfigureRemoteDialog_EmptyClipboardDialogMessage=The clipboard is empty
-AbstractConfigureRemoteDialog_EmptyClipboardDialogTitle=Nothing to Paste
-AbstractConfigureRemoteDialog_InvalidRefDialogMessage=Refspec {0} does not appear to be valid, do you still want to add it?
-AbstractConfigureRemoteDialog_InvalidRefDialogTitle=Invalid Ref
-AbstractConfigureRemoteDialog_MissingUriMessage=Please provide at least one URI
-AbstractConfigureRemoteDialog_NoRefSpecDialogMessage=The contents of the clipboard does not appear to be a refspec
-AbstractConfigureRemoteDialog_NoRefSpecDialogTitle=Not a Refspec
-AbstractConfigureRemoteDialog_PasteRefSpecButton=&Paste
-AbstractConfigureRemoteDialog_RefMappingGroup=Ref mappings
-AbstractConfigureRemoteDialog_ReusedRemoteWarning=Note that remote ''{0}'' is used from {1} other branches (see tooltip for a list)
-AbstractConfigureRemoteDialog_RevertButton=Re&vert
-AbstractConfigureRemoteDialog_SaveButton=Save
-AbstractConfigureRemoteDialog_UriLabel=&URI:
-
-SimpleConfigureFetchDialog_DialogMessage=In order to use a remote for fetch, you must specify a URI and at least one ref mapping
-SimpleConfigureFetchDialog_DialogTitle=Configure fetch for remote ''{0}''
-SimpleConfigureFetchDialog_MissingMappingMessage=Please provide a ref mapping
-SimpleConfigureFetchDialog_SaveAndFetchButton=Save and Fetch
-SimpleConfigureFetchDialog_WindowTitle=Configure Fetch
-
+SelectUriWiazrd_Title=Select a URI
 SimpleConfigurePushDialog_UseUriForPushUriMessage=No Push URIs, will use URI {0}
 SimpleConfigurePushDialog_WindowTitle=Configure Push
 SimpleConfigurePushDialog_AddPushUriButton=&Add...
+SimpleConfigurePushDialog_AddRefSpecButton=A&dd...
+SimpleConfigurePushDialog_BranchLabel=Branch:
 SimpleConfigurePushDialog_ChangePushUriButton=C&hange...
+SimpleConfigurePushDialog_ChangeRefSpecButton=M&odify...
+SimpleConfigurePushDialog_ChangeUriButton=&Change...
+SimpleConfigurePushDialog_CopyRefSpecButton=C&opy
 SimpleConfigurePushDialog_DefaultPushNoRefspec=No Push Refspec, will push currently checked out branch instead.
 SimpleConfigurePushDialog_DeletePushUriButton=De&lete
+SimpleConfigurePushDialog_DeleteRefSpecButton=Dele&te
+SimpleConfigurePushDialog_DeleteUriButton=Re&move
+SimpleConfigurePushDialog_DetachedHeadMessage=Detached HEAD
 SimpleConfigurePushDialog_DialogMessage=In order to use a remote for push, you must specify at least one URI and at least one ref mapping
 SimpleConfigurePushDialog_DialogTitle=Configure push for remote ''{0}''
+SimpleConfigurePushDialog_DryRunButton=Dr&y-Run
+SimpleConfigurePushDialog_EditAdvancedButton=Ad&vanced...
+SimpleConfigurePushDialog_EmptyClipboardDialogMessage=The clipboard is empty
+SimpleConfigurePushDialog_EmptyClipboardDialogTitle=Nothing to Paste
+SimpleConfigurePushDialog_InvalidRefDialogMessage=Refspec {0} does not appear to be valid, do you still want to add it?
+SimpleConfigurePushDialog_InvalidRefDialogTitle=Invalid Ref
+SimpleConfigurePushDialog_MissingUriMessage=Please provide at least one URI
+SimpleConfigurePushDialog_NoRefSpecDialogMessage=The contents of the clipboard does not appear to be a refspec
+SimpleConfigurePushDialog_NoRefSpecDialogTitle=Not a Refspec
+SimpleConfigurePushDialog_PasteRefSpecButton=Pa&ste
 SimpleConfigurePushDialog_PushUrisLabel=Push URIs
+SimpleConfigurePushDialog_RefMappingGroup=Ref mappings
+SimpleConfigurePushDialog_ReusedOriginWarning=Note that remote ''{0}'' is used from {1} other branches (see tooltip for a list)
+SimpleConfigurePushDialog_RevertButton=Re&vert
 SimpleConfigurePushDialog_SaveAndPushButton=Save and Push
-
+SimpleConfigurePushDialog_SaveButton=Save
+SimpleConfigurePushDialog_URILabel=&URI:
 SkipRebaseCommand_CancelDialogMessage=The skip operation was canceled
 SkipRebaseCommand_JobName=Skipping commit during Rebase
 
@@ -1759,6 +1749,34 @@ GitModelWorkingTree_workingTree=<working tree>
 
 EgitUiEditorUtils_openFailed=Opening editor failed
 
+SimpleConfigureFetchDialog_AddRefSpecButton=A&dd...
+SimpleConfigureFetchDialog_BranchLabel=Branch:
+SimpleConfigureFetchDialog_ChangeRefSpecButton=M&odify...
+SimpleConfigureFetchDialog_ChangeUriButton=&Change...
+SimpleConfigureFetchDialog_CopyRefSpecButton=C&opy
+SimpleConfigureFetchDialog_DeleteRefSpecButton=Dele&te
+SimpleConfigureFetchDialog_DeleteUriButton=Re&move
+SimpleConfigureFetchDialog_DetachedHeadMessage=Detached HEAD
+SimpleConfigureFetchDialog_DialogMessage=In order to use a remote for fetch, you must specify a URI and at least one ref mapping
+SimpleConfigureFetchDialog_DialogTitle=Configure fetch for remote ''{0}''
+SimpleConfigureFetchDialog_DryRunButton=Dr&y-Run
+SimpleConfigureFetchDialog_EditAdvancedButton=Ad&vanced...
+SimpleConfigureFetchDialog_EmptyClipboardMessage=The clipboard is empty
+SimpleConfigureFetchDialog_InvalidRefDialogMessage=Refspec {0} does not appear to be valid, do you still want to add it?
+SimpleConfigureFetchDialog_InvalidRefDialogTitle=Invalid Ref
+SimpleConfigureFetchDialog_MissingMappingMessage=Please provide a ref mapping
+SimpleConfigureFetchDialog_MissingUriMessage=Please provide a URI
+SimpleConfigureFetchDialog_NothingToPasteMessage=Nothing to paste
+SimpleConfigureFetchDialog_NotRefSpecDialogMessage=The contents of the clipboard does not appear to be a refspec
+SimpleConfigureFetchDialog_NotRefSpecDialogTitle=Not a Refspec
+SimpleConfigureFetchDialog_PateRefSpecButton=&Paste
+SimpleConfigureFetchDialog_RefMappingGroup=Ref mappings
+SimpleConfigureFetchDialog_ReusedRemoteWarning=Note that remote ''{0}'' is used from {1} other branches (see tooltip for a list)
+SimpleConfigureFetchDialog_RevertButton=Re&vert
+SimpleConfigureFetchDialog_SaveAndFetchButton=Save and Fetch
+SimpleConfigureFetchDialog_SaveButton=Save
+SimpleConfigureFetchDialog_UriLabel=&URI:
+SimpleConfigureFetchDialog_WindowTitle=Configure Fetch
 SimpleFetchActionHandler_NothingToFetchDialogMessage=Cannot fetch anything: the currently checked-out branch is based on a local branch
 SimpleFetchActionHandler_NothingToFetchDialogTitle=Nothing to Fetch
 SimpleFetchRefSpecWizard_WizardTitle=Adding a Refspec for Fetch
